sonarqube/sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  labels:
    app: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:9.9-community
        ports:
        - containerPort: 9000
          protocol: TCP
        volumeMounts:
        - name: sonarqube-data
          mountPath: /opt/sonarqube/data
        - name: sonarqube-logs
          mountPath: /opt/sonarqube/logs
        - name: sonarqube-extensions
          mountPath: /opt/sonarqube/extensions
      volumes:
      - name: sonarqube-data
        persistentVolumeClaim: 
          claimName: sonarqube-data-pvc
      - name: sonarqube-logs
        persistentVolumeClaim: 
          claimName: sonarqube-logs-pvc
      - name: sonarqube-extensions
        persistentVolumeClaim: 
          claimName: sonarqube-extensions-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-svc
  labels:
    app: sonarqube
spec:
  selector:
    app: sonarqube
  ports:
    - port: 80
      targetPort: 9000
